[tool.poetry]
name = "genai-demo"
version = "0.1.0"
description = ""
authors = ["Alaa Abdelgawad <alaaabdelgawad97@gmail.com>"]
readme = "README.md"
packages = [{include = "genai_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.0"
langchain = "^0.3.3"
langgraph = "^0.2.35"
cassio = "^0.1.10"
python-dotenv = "^0.21.0"
langchain-community = "^0.3.2"
bs4 = "^0.0.2"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.2"
langchain-groq = "^0.2.0"
arxiv = "^2.1.3"
wikipedia = "^1.4.0"
ipykernel = "^6.29.5"
torch = "1.13.1"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
